--- a/photolith_analysis.ipynb
+++ b/photolith_analysis.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "ce240fe7-92d0-426f-8364-1504f149cd5a",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
     "# Bring the files we're going to need for the report\n",
     "\n",
     "data_files = [\"pattern_design.png\", \"Photolith pattern.png\", \"Scale bar screenshot.png\", \"Screenshot smallest bars.png\"]\n",
-    "os.makedirs(\n",
+    "os.makedirs(\"./data\", exist_ok=True)\n",
     "for fn in data_files:\n",
     "    fp = f\"./data/{fn}\"\n",
     "    if not os.path.exists(fp):\n",
