Update documentation, add report

--- a/photolith_analysis.ipynb
+++ b/photolith_analysis.ipynb
@@ -9,11 +9,11 @@
     "**Author:** Rowan Temple<br>\n",
     "**Date created:** 17th Jan 2025<br>\n",
     "**Date finalised:** 18th Jan 2025<br>\n",
-    "**Wafer:** abcd1234<br>\n",
-    "**Device:** bcde2345<br>\n",
+    "**Sample ID:** abcd1234<br>\n",
+    "**Device ID:** bcde2345<br>\n",
     "**Fabrication by:** Joe<br>\n",
     "**Date of fabrication:** 2025-01-01<br>\n",
-    "**Date of TEM measurement:** 2025-01-02<br>"
+    "**Date of measurement:** 2025-01-02<br>"
    ]
   },
   {
@@ -22,7 +22,7 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "Here we analyse a calibration photolithography bar pattern imaged with TEM. The designed pattern is lines from 50 to 0.5um in size with 15um spacing. We are given the design file in GDS2 format.\n",
+    "Here we analyse a calibration photolithography bar pattern imaged with SEM. The designed pattern is lines from 50 to 0.5um in size with 15um spacing. We are given the design file in GDS2 format.\n",
     "\n",
     "Typical tasks required for the analysis includes detecting the structures, verifying their dimensions, and identifying any defects in, and yield of, the devices vs. designed parameters."
    ]
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "ce240fe7-92d0-426f-8364-1504f149cd5a",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
    "metadata": {},
    "source": [
     "## Load and preprocess image\n",
-    "Load the TEM image file and visually check it."
+    "Load the image file and visually check it."
    ]
   },
   {
@@ -131,13 +131,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully laded TEM image. Dimension:  (2168, 2168, 3)\n"
+      "Successfully loaded data image. Dimension:  (2168, 2168, 3)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x277c3b0a050>"
+       "<matplotlib.image.AxesImage at 0x2bdc23b2050>"
       ]
      },
      "execution_count": 3,
@@ -158,7 +158,7 @@
    "source": [
     "rdat = plt.imread(\"./data/Photolith pattern.png\")\n",
     "\n",
-    "print(\"Successfully laded TEM image. Dimension: \", rdat.shape)\n",
+    "print(\"Successfully loaded data image. Dimension: \", rdat.shape)\n",
     "plt.imshow(rdat)"
    ]
   },
@@ -216,7 +216,7 @@
    "metadata": {},
    "source": [
     "## Threshold image\n",
-    "Binarize the image using Otsu thresholding technique. This will search for the best threshold on a generalised image even if the exposure or colours change."
+    "Binarize the image using Otsu thresholding technique. This will search for the best threshold on a generalised image even if the exposure or contrast changes."
    ]
   },
   {
@@ -247,7 +247,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x277c3c2bdc0>"
+       "<matplotlib.lines.Line2D at 0x2bdc24d2500>"
       ]
      },
      "execution_count": 7,
@@ -330,9 +330,9 @@
     "\n",
     "ax0, ax1 = create_image_comparison_figure()\n",
     "ax0.imshow(dat, cmap=\"gray\")\n",
-    "ax0.set_title('Original')\n",
+    "ax0.set_title(\"Original\")\n",
     "ax1.imshow(binary, cmap=\"gray\")\n",
-    "ax1.set_title('Binarised')\n",
+    "ax1.set_title(\"Binarised\")\n",
     "\n",
     "# zoom in\n",
     "ax0, ax1 = create_image_comparison_figure()\n",
@@ -340,9 +340,9 @@
     "crop = (slice(round(shpi * 0.12), round(shpi * 0.18)),\n",
     "        slice(round(shpj * 0.12), round(shpj * 0.18)))\n",
     "ax0.imshow(dat[crop], cmap=\"gray\")\n",
-    "ax0.set_title('Zoomed original')\n",
+    "ax0.set_title(\"Zoomed original\")\n",
     "ax1.imshow(binary[crop], cmap=\"gray\")\n",
-    "ax1.set_title('Zoomed binarised')"
+    "ax1.set_title(\"Zoomed binarised\")"
    ]
   },
   {
@@ -392,9 +392,9 @@
     "crop = (slice(round(shpi * 0.12), round(shpi * 0.18)),\n",
     "        slice(round(shpj * 0.12), round(shpj * 0.18)))\n",
     "ax0.imshow(dat[crop], cmap=\"gray\")\n",
-    "ax0.set_title('Original after 3x resize')\n",
+    "ax0.set_title(\"Original after 3x resize\")\n",
     "ax1.imshow(binary[crop], cmap=\"gray\")\n",
-    "ax1.set_title('Binarised after rescale')"
+    "ax1.set_title(\"Binarised after rescale\")"
    ]
   },
   {
@@ -460,7 +460,7 @@
    "metadata": {},
    "source": [
     "### Test scale\n",
-    "Let's double check the scale manually. From a visual inspection using ImageJ software I measure 184 pixels, verifying that the automated process has got an accurate value. Ideally we should also test the TEM distance calibration on a regular basis using a physical calibration sample. Ideally something on the wafer within range of the test device."
+    "Let's double check the scale manually. From a visual inspection using ImageJ software I measure 184 pixels, verifying that the automated process has got an accurate value. Ideally we should also test the SEM distance calibration on a regular basis using a physical calibration sample. Ideally something on the wafer within range of the test device."
    ]
   },
   {
@@ -506,6 +506,7 @@
     "label_image = measure.label(binary)\n",
     "properties = measure.regionprops(label_image)\n",
     "\n",
+    "# extract relevant particle properties into a dict we can convert to a DataFrame\n",
     "df = {\n",
     "    prop.label: {\n",
     "        \"device_label\": \"sample_1\",\n",
@@ -787,7 +788,7 @@
     "        # Draw bounding box\n",
     "        minr, minc, maxr, maxc = prop.bbox\n",
     "        ax.add_patch(plt.Rectangle((minc, minr), maxc - minc, maxr - minr,\n",
-    "                                   edgecolor='blue', facecolor='none', lw=2))\n",
+    "                                   edgecolor=\"blue\", facecolor=\"none\", lw=2))\n",
     "\n",
     "\n",
     "xlims = round(0.3 * binary.shape[1]), round(0.7 * binary.shape[1])\n",
@@ -801,7 +802,7 @@
     "plot_bboxes(ax0, properties)\n",
     "for prop in properties:\n",
     "    ax0.text(prop.centroid[1], prop.centroid[0], f\"{prop.label}\",\n",
-    "             color='red', fontsize=10, ha='center', va='top')\n",
+    "             color=\"red\", fontsize=10, ha=\"center\", va=\"top\")\n",
     "\n",
     "ax1.imshow(binary, cmap=\"gray\")\n",
     "plot_bboxes(ax1, properties)\n",
@@ -810,7 +811,7 @@
     "    x, y = prop.centroid[1], prop.centroid[0]\n",
     "    if (xlims[0] <= x <= xlims[1]) and (ylims[1] <= y <= ylims[0]):\n",
     "        ax1.text(x, y, f\"{prop.label}\",\n",
-    "                 color='red', fontsize=10, ha='center', va='top')\n",
+    "                 color=\"red\", fontsize=10, ha=\"center\", va=\"top\")\n",
     "ax1.set_xlim(*xlims)\n",
     "ax1.set_ylim(*ylims)\n",
     "\n",
@@ -865,7 +866,7 @@
     "for prop in properties:\n",
     "    ax0.text(prop.centroid[1], prop.bbox[0],\n",
     "             f\"{(prop.bbox[3] - prop.bbox[1]) * pix_to_um:.3f} um\",\n",
-    "             color='red', fontsize=10, ha='center', va='top')\n",
+    "             color=\"red\", fontsize=10, ha=\"center\", va=\"top\")\n",
     "\n",
     "ax1.imshow(binary, cmap=\"gray\")\n",
     "plot_bboxes(ax1, properties)\n",
@@ -874,7 +875,7 @@
     "    if (xlims[0] <= x <= xlims[1]) and (ylims[1] <= y <= ylims[0]):\n",
     "        ax1.text(prop.centroid[1], prop.bbox[0],\n",
     "                 f\"{(prop.bbox[3] - prop.bbox[1]) * pix_to_um:.3f} um\",\n",
-    "                 color='red', fontsize=10, ha='center', va='top')\n",
+    "                 color=\"red\", fontsize=10, ha=\"center\", va=\"top\")\n",
     "ax1.set_xlim(*xlims)\n",
     "ax1.set_ylim(*ylims)"
    ]
@@ -916,7 +917,7 @@
     "for prop in properties:\n",
     "    ax0.text(prop.centroid[1], prop.bbox[0],\n",
     "             f\"{(prop.bbox[2] - prop.bbox[0]) * pix_to_um:.3f} um\",\n",
-    "             color='red', fontsize=10, ha='center', va='top')\n",
+    "             color=\"red\", fontsize=10, ha=\"center\", va=\"top\")\n",
     "\n",
     "ax1.imshow(binary, cmap=\"gray\")\n",
     "plot_bboxes(ax1, properties)\n",
@@ -925,7 +926,7 @@
     "    if (xlims[0] <= x <= xlims[1]) and (ylims[1] <= y <= ylims[0]):\n",
     "        ax1.text(prop.centroid[1], prop.bbox[0],\n",
     "                 f\"{(prop.bbox[2] - prop.bbox[0]) * pix_to_um:.3f} um\",\n",
-    "                 color='red', fontsize=10, ha='center', va='top')\n",
+    "                 color=\"red\", fontsize=10, ha=\"center\", va=\"top\")\n",
     "ax1.set_xlim(*xlims)\n",
     "ax1.set_ylim(*ylims)"
    ]
@@ -1342,10 +1343,10 @@
    ],
    "source": [
     "label_map = {\n",
-    "    'vertical_left': [3, 6, 9, 12, 15, 20, 21, 25, 27],\n",
-    "    'vertical_right': [2, 5, 8, 11, 14, 17, 19, 23, 26],\n",
-    "    'horizontal_top': [1, 4, 7, 10, 13, 16, 18, 22, 24],\n",
-    "    'horizontal_bottom': [36, 35, 34, 33, 32, 31, 30, 29, 28]\n",
+    "    \"vertical_left\": [3, 6, 9, 12, 15, 20, 21, 25, 27],\n",
+    "    \"vertical_right\": [2, 5, 8, 11, 14, 17, 19, 23, 26],\n",
+    "    \"horizontal_top\": [1, 4, 7, 10, 13, 16, 18, 22, 24],\n",
+    "    \"horizontal_bottom\": [36, 35, 34, 33, 32, 31, 30, 29, 28]\n",
     "}\n",
     "\n",
     "# expected width in microns\n",
@@ -1842,10 +1843,10 @@
    "source": [
     "### Shortcomings of analysis and next steps\n",
     "\n",
-    "* The analysis above was all done on a binarized 2 colour image. When we look at the TEM image we can see the excess (smeared) portions of the bar have less intensity. This is a weakness of the above analysis and it may be interesting in future to isolate different parts of the image using more colour thresholds or other methods that don't lose the grayscale information.\n",
-    "* We manually related the detected features in the TEM image to their respective pattern feature in order to do the width comparison. It would be good in future to automate this process. This could be done through looking at the particle sizes and central positions and comparing them to reference values from the patterning image.\n",
-    "* It would be nice in future to create a difference image between the defined pattern and the imaged pattern. We could do this by exporting the GDS file in a suitable raster format then aligning the measured image with the pattern image using automated aligment tools like `skimage.registration.phase_cross_correlation`.\n",
-    "* We only analysed the bar widths. There are other aspects of the design we could look at, for instance shape of the bar ends or the bar spacing etc. This would be a collaboration process between the applied scientist and the fabrication experts to decide which features to attach importance to and focus on.\n",
+    "* The analysis above was all done on a binarized 2 colour image. When we look at the SEM image we can see the excess (smeared) portions of the bar have less intensity. This is a weakness of the above analysis and it may be interesting in future to isolate different parts of the image using more colour thresholds or other methods that don't lose the grayscale information.\n",
+    "* We manually related the detected features in the SEM image to their respective pattern feature in order to do the width comparison. It would be good in future to automate this process. This could be done through looking at the particle sizes and central positions and comparing them to reference values from the patterning image.\n",
+    "* It would be nice in future to create a difference image between the defined pattern and the imaged pattern. We could do this by exporting the GDS file in a suitable raster format then aligning the measured image with the pattern image using automated aligment tools like `skimage.registration.phase_cross_correlation`. Taking the difference between these two images would highlight only the portions of the measured image that don't comply with the designed pattern.\n",
+    "* We only analysed the bar widths. There are other aspects of the design we could look at, for instance shape of the bar ends, the bar spacing the bar area etc. This would be a collaboration process between the applied scientist and the fabrication experts to decide which features to attach importance to and focus on.\n",
     "\n"
    ]
   },
@@ -1861,7 +1862,7 @@
     "### Main exercise\n",
     "*Considering the image below, please write code to automatically determine the features, their dimensions and analyse the data that you get from this, and include the results in the report as if you were providing feedback to the fabrication team. (High quality image of below is attached along the design file used to make this as a gds file. To read the gds file you can download and install Klayout or use any other layout editor of your choice)*\n",
     "\n",
-    "The above analysis provides a detailed analysis report to the fabrication team. By providing the report in jupyter notebook format they are able to directly see the analysis process. Adjustments can be quickly made if there is any feedback, and colleagues are able to collaborate on the work in real time. In a production fabrication process the metadata stored at the top of the file (sample number, date of measurement) should be formalised and the reports should be archived. If there is a high volume need for this particular analysis the code can be stabalised in a python package and provided as a script that anyone can run on an input image and see an automatically generated set of output report/analysis files.\n",
+    "The above analysis provides a detailed analysis report to the fabrication team. By providing the report in jupyter notebook format they are able to directly see the analysis process. Adjustments can be quickly made if there is any feedback, and colleagues are able to collaborate on the work in real time. In a production fabrication process the metadata stored at the top of the file (sample number, date of measurement) should be formalised and the reports should be archived. If there is a high volume need for this particular analysis the code can be stabalised in a python package and provided as a script that anyone can run on an input image and see an automatically generated set of output report/analysis files. I also have extracted some figures and created a high level exectutive report (report_2025-01-18_abcd1234.pdf) useful for just a quick look. Again if this is a high volume process with a standardised report we should automate the creation of the executive report.\n",
     "\n",
     "### Question 1\n",
     "*How would you go about writing this code if you have many repetitions of this structure on each sample, and you are trying to compare many different samples? (There is no requirement to actually write this code)*\n",
@@ -1882,7 +1883,7 @@
     "### Question 3\n",
     "*How would you deal with images with different brightness/contrast (example above. There is no requirement to actually write this code)*\n",
     "\n",
-    "The method given above should cope reasonably well if the imager brightness/contrast changes. The Otsu thresholding method is designed to find a threshold in the colour histogram that gives the best contrast between two peaked distributions of colour. If the contrast is very bad it might fail and more work would need to be done. But at that point for a basic pattern like this it's more likely to be an issue with the TEM measurement and the measurement process would need more thought. Perhaps contrast could be improved by changing the deposition material for instance.\n",
+    "The method given above should cope reasonably well if the imager brightness/contrast changes. The Otsu thresholding method is designed to find a threshold in the colour histogram that gives the best contrast between two peaked distributions of colour. If the contrast is very bad it might fail and more work would need to be done. But at that point for a basic pattern like this it's more likely to be an issue with the SEM measurement and the measurement process would need more thought. Perhaps contrast could be improved by changing the deposition material for instance.\n",
     "\n"
    ]
   }
